# cursor-kg

./: .gitignore  CLAUDE.md  CODEBASE_INDEXING_TOOL_SUMMARY.md  CONFIG_MIGRATION_GUIDE.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  Dockerfile  ENHANCED_FEATURES_GUIDE.md  FINAL_ENHANCEMENT_SUMMARY.md  MACOS_APP_README.md  MCP_DOCKER_TO_SSE_MIGRATION_GUIDE.md  MCP_SSE_MIGRATION_SUMMARY.md  Makefile  README.md  SECURITY_AUDIT_REPORT.md  VERBOSITY_FIX_SUMMARY.md  VERBOSITY_SYSTEM_GUIDE.md  WEEK2-3-IMPLEMENTATION.md  WEEK4-IMPLEMENTATION.md  WEEK5-IMPLEMENTATION.md  WEEK5_COMPLETION_SUMMARY.md  build_app.sh  config.toml  docker-compose.yml  launch_kg_server.sh  launch_no_bounce.sh  monitor_kg.sh  progress.md  pyproject.toml  requirements-dev.txt  start.sh  test_cursor_connection.py  test_setup.py  test_tools.py  test_week5_features.py  tools_fix.md  verbosity_examples.json  week5_benchmark.py  week5_performance_report.json  week5_test_report.json
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/rules/: mcp-tests.mdc
benchmarks/: graph_performance.rs
src/: lib.rs  main.rs
src/config/: defaults.rs  mod.rs
src/context/: mod.rs  window_manager.rs
src/embeddings/: batch_processor.rs  mod.rs  models.rs  onnx_runtime.rs
src/graph/: memory.rs  mod.rs  queries.rs  storage.rs
src/indexing/: codebase_indexer.rs  dependency_mapper.rs  language_support.rs  mod.rs
src/mcp/: errors.rs  handlers.rs  mod.rs  performance.rs  protocol.rs  server.rs  tools.rs
src/memory/: mod.rs  optimization.rs
src/migration/: backup.rs  graphiti_migrator.rs  mod.rs  validation.rs
src/nlp/: entity_extractor.rs  mod.rs  relationship_extractor.rs
src/search/: hybrid_search.rs  mod.rs  text_search.rs  vector_search.rs
src/security/: auth.rs  mod.rs
src/stability/: circuit_breaker.rs  mod.rs
src/validation/: hallucination_detector.rs  input_validator.rs  mod.rs
tests/: end_to_end_tests.rs  health_check_tests.rs  integration_tests.rs
