[package]
name = "kg-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Knowledge Graph MCP Server with local embeddings and advanced analytics"
readme = "README.md"
homepage = "https://github.com/yourusername/kg-mcp-server"
repository = "https://github.com/yourusername/kg-mcp-server"
license = "MIT"
keywords = ["mcp", "knowledge-graph", "embeddings", "ai", "cursor"]
categories = ["command-line-utilities", "database", "web-programming"]

[dependencies]
# MCP Protocol
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Graph Engine
petgraph = "0.6"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Local Embeddings - ONNX Runtime
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }

# Vector Operations
ndarray = "0.15"
candle-core = "0.8"
candle-nn = "0.8" 
candle-transformers = "0.8"

# Search and Text Processing
tantivy = "0.22"  # Full-text search engine
unicode-normalization = "0.1"
regex = "1.10"

# HTTP and Networking
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"

# Cryptography
sha2 = "0.10"

# Configuration
config = "0.14"
toml = "0.8"

# Logging and Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"

# Utilities
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
once_cell = "1.0"
rayon = "1.8"  # Parallel processing
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
which = "6.0"

# Optional FAISS for advanced vector operations
# faiss = { version = "0.11", optional = true }

# HTTP server and SSE support
axum = { version = "0.7", features = ["macros", "tokio"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
futures-util = "0.3"

# Caching
lru = "0.12"

# Menu Bar App
tray-item = "0.8.0"

# Miscellaneous
indexmap = { version = "2.0", features = ["serde"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[features]
default = ["local-embeddings"]
local-embeddings = []
# advanced-vector = ["faiss"]

[[bin]]
name = "kg-mcp-server"
path = "src/main.rs"

[[bin]]
name = "kg-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "kg-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "kg-mcp-app"
path = "src/bin/macos_app.rs"

[[bench]]
name = "graph_performance"
harness = false
path = "benchmarks/graph_performance.rs"

# Production build optimizations
[profile.release]
opt-level = 3
debug = false
strip = true
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binary size

# Development profile optimizations
[profile.dev]
opt-level = 0
debug = 1               # Reduced debug info for faster builds

# Release with debug info (for profiling)
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false 